cmake_minimum_required(VERSION 2.8)

project(port_authority)

set(CMAKE_C_COMPILER mpicc)
set(CMAKE_CXX_COMPILER mpic++)

set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++14")
set(CMAKE_CXX_FLAGS_DEBUG "-g -pedantic -pedantic-errors")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

# use OpenMP if compiler supports it
find_package(OpenMP)
if (OPENMP_FOUND)
  set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

find_package(MPI REQUIRED)
find_package(Boost COMPONENTS program_options REQUIRED)

set(CMAKE_BINARY_DIR build)
set(LIBRARY_OUTPUT_PATH lib)
set(EXECUTABLE_OUTPUT_PATH bin)

include_directories(include)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})
include_directories(${Boost_INCLUDE_DIR})

file(GLOB libsources "src/*.cpp" "include/*.cpp")

add_library(port_authority SHARED ${libsources})
add_executable(spring_linear examples/spring/spring_linear.cpp)
add_executable(spring_linear_mpi examples/spring/spring_linear_mpi.cpp)
add_executable(spring_linear_mpi_study examples/spring/spring_linear_mpi_study.cpp)
add_executable(spring_quad_mpi examples/spring/spring_quad_mpi.cpp)
add_executable(spring_quad_mpi_study examples/spring/spring_quad_mpi_study.cpp)
add_executable(two_state examples/two-state/two_state.cpp)
add_executable(two_state_ic_study examples/two-state/two_state_ic_study.cpp)
add_executable(spring_linear_kawasaki_mpi examples/spring/spring_linear_kawasaki_mpi.cpp)
add_executable(spring_quad_kawasaki_mpi examples/spring/spring_quad_kawasaki_mpi.cpp)
add_executable(spring_linear_kawasaki_suite examples/suite/spring_linear_kawasaki_suite.cpp)
add_executable(lj_liquid_Ar examples/lj/lj_liquid_Ar.cpp)
add_executable(lj_liquid_Ar_debug examples/lj/lj_liquid_Ar_debug.cpp)
add_executable(avg_pressure_liquid_Ar examples/lj/avg_pressure_liquid_Ar.cpp)
add_executable(lj-lookup_liquid examples/lj-lookup/lj-lookup_liquid.cpp)
add_executable(lj_liquid_Ar_cv examples/lj/lj_liquid_Ar_cv.cpp)
add_executable(tst examples/spring/tst.cpp)

if (UNIX)
    target_link_libraries(port_authority m)
    target_link_libraries(lj_liquid_Ar_debug m)
    target_link_libraries(avg_pressure_liquid_Ar m)
    target_link_libraries(tst m)
endif (UNIX)

target_link_libraries(port_authority armadillo yaml-cpp)
target_link_libraries(spring_linear armadillo port_authority)
target_link_libraries(spring_linear_mpi armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(spring_linear_mpi_study armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(spring_quad_mpi armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(spring_quad_mpi_study armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(two_state armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(two_state_ic_study armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(spring_linear_kawasaki_mpi armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(spring_quad_kawasaki_mpi armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(spring_linear_kawasaki_suite armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(lj_liquid_Ar armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(lj_liquid_Ar_debug armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(avg_pressure_liquid_Ar armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(lj-lookup_liquid armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(lj_liquid_Ar_cv armadillo port_authority ${MPI_CXX_LIBRARIES})
target_link_libraries(tst armadillo port_authority ${Boost_LIBRARIES} ${MPI_CXX_LIBRARIES})
